[package]
edition = "2018"
name = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_derive = "1.0.130"
serde_json = "1.0.67"
sha2 = "0.9.8"
time = "0.1"
